--- a/NewtonLibraryBino5.csproj
+++ b/NewtonLibraryBino5.csproj
@@ -16,4 +16,8 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.14" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\source\repos\SeidoHelpers\Helpers\Helpers.csproj" />
+  </ItemGroup>
+
 </Project>
